--- a/produit1.html
+++ b/produit1.html
@@ -10,10 +10,21 @@
 <body>
  
 
-    <h1 style="text-align: center;">Impression numérique  </h1>
+    
+    <!-- Bouton WhatsApp -->
+     <!-- Bouton WhatsApp -->
+     <a href="https://wa.me/+2250141544880" id="whatsapp-button" target="_blank">
+        <img src="logoW.jpg" alt="WhatsApp">
+    </a>
+
+    <h1 style="text-align: center; background-color: aqua;">Impression numérique  </h1>
 
 
-<h1 style="text-align: center;">Impression Numérique - Petits Formats</h1>
+             <!-- ARRIERE PLAN  -->
+
+
+
+<h1 style="text-align: center; background-color: rgb(45, 60, 177); ;" >Impression Numérique - Petits Formats</h1>
 
 <section class="products">
     <div class="product-container">
@@ -273,3 +284,11 @@
             </div>
 
 </section>
+</div>
+</h1>
+
+
+</body>
+
+</html>
+
